--- a/lightbulb/tryjs_lightbulb.html
+++ b/lightbulb/tryjs_lightbulb.html
@@ -14,11 +14,11 @@
         <p>In sd asd asd asd asd as das das dsa das
             da sd asd asd asd asd asd asd   
         </p>
-        <button onclick="document.getElementById('myImage').scr='pic_bulbon.gif'">
+        <button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">
             Turn on the light
         </button>
         <img id="myImage" src="pic_bulboff.gif" style="width: 100px"/>
-        <button onclick="document.getElementById('myImage').scr='pic_bulboff.gif'">
+        <button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">
             Turn off the light
         </button>
     </body>
